--- a/assignment3/.settings/org.eclipse.core.resources.prefs
+++ b/assignment3/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/WEB-INF/views/changePassword.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/detailBook.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/login.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/user.jsp=UTF-8
