--- a/assignment3/src/main/webapp/WEB-INF/web.xml
+++ b/assignment3/src/main/webapp/WEB-INF/web.xml
@@ -57,5 +57,13 @@
             <page-encoding>UTF-8</page-encoding>
         </jsp-property-group>
     </jsp-config>
+    
+     <servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<url-pattern>*.png</url-pattern>
+		<url-pattern>*.gif</url-pattern>
+		<url-pattern>*.jpg</url-pattern>
+		<url-pattern>*.jpeg</url-pattern>
+	</servlet-mapping>
 
 </web-app>
