--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
-/bin/
-/.metadata/
-/.metadata/
-/.recommenders/
-/.sonarlint/
+# Eclipse
+.classpath
+.project
+.settings/
+ 
+# Intellij
+.idea/
+*.iml
+*.iws
+ 
+# Mac
+.DS_Store
+ 
+# Maven
+log/
+target/
