--- a/assignment4/pom.xml
+++ b/assignment4/pom.xml
@@ -55,17 +55,22 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-
 		<!-- end thymeleaf -->
-		<!-- CSDL -->
 
+		<!-- CSDL -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
 		<!--end csdl -->
+
+		<!-- security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<!-- end -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
