--- a/assignment4/src/main/resources/application.properties
+++ b/assignment4/src/main/resources/application.properties
@@ -13,7 +13,8 @@ spring.datasource.password=1996Tuyen
 # JPA / HIBERNATE
 # ===============================
  
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=none
-spring.jpa.generate-ddl=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = none
+spring.jpa.generate-ddl = true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
