Pageable v1 not json

--- a/assignment4/src/main/resources/application.properties
+++ b/assignment4/src/main/resources/application.properties
@@ -17,4 +17,5 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = none	
 spring.jpa.generate-ddl = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.thymeleaf.cache=false
 #spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
