--- a/assignment4/src/main/resources/application.properties
+++ b/assignment4/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#server.port = 8081
+server.port = 8081
 
 # ===============================
 # DATABASE
@@ -14,7 +14,7 @@ spring.datasource.password=1996Tuyen
 # ===============================
  
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = none	
+spring.jpa.hibernate.ddl-auto = none
 spring.jpa.generate-ddl = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #spring.thymeleaf.cache=false
