--- a/assignment4/pom.xml
+++ b/assignment4/pom.xml
@@ -60,12 +60,15 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<!-- Spring Security -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+		</dependency> -->
+		
+				<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 		</dependency>
-		
-		
 	</dependencies>
 
 	<build>
