--- a/assignment4/src/main/resources/application.properties
+++ b/assignment4/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+#spring.jpa.show-sql=false
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=update
 
 #server.port = 8081
 
@@ -27,11 +27,11 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.thymeleaf.cache=false
 #spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/assignment4?autoReconnect=true&useSSL=false
-#spring.datasource.username=postgres
-#spring.datasource.password=1
-#spring.jpa.generate-ddl=true
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/assignment4?autoReconnect=true&useSSL=false
+spring.datasource.username=postgres
+spring.datasource.password=1
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #spring.datasource.url=${JDBC_DATABASE_URL}
 #spring.datasource.username=${JDBC_DATABASE_USERNAME}
